Updated repo structure

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="hero-text">
           <h1>Henil Agrawal</h1>
           <p class="rule" aria-hidden="true">----------------------------------------</p>
-          <p class="tagline">- Computer Science Student · VR Developer · smtg -</p>
+          <p class="tagline">- Computer Science Student · VR Developer · smthg -</p>
           <div class="links">
             <!-- GitHub -->
             <div class="chip-wrap">
